# profileforge

./: main.py  pyproject.toml
extractors/: docx_extractor.py  ingest.py  loader.py  pdf_extractor.py  text_extractor.py
models/: profile.py  raw_profile.py  warning.py
output/: index.html  profile.json  warnings.json
prompts/: extraction.txt
resume/: resume.docx  resume.md
services/: extractor.py  normalizer.py  portfolio_builder.py  profile_validator.py
templates/: portfolio.html
