[project]
name = "profileforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "rich>=15.0.0",
]
